fix responsiveness on tablets and desktops

--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,11 @@ html {
 
 .page-container {
   max-width: 100%;
-  margin-top: 1rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: scroll;
   position: relative;
 }
 html::after {
@@ -127,13 +126,14 @@ input[type="email"],
   content: "";
   display: block;
   position: absolute;
-  top: -2px;
-  left: -130px;
+  top: -4px;
+  left: -50px;
   background: #fff;
   width: 10px;
-  height: 30px;
+  height: 40px;
   opacity: 40%;
   transform: rotate(-45deg);
+  border-radius: 5px;
 }
 .form-container button:hover:after {
   left: 120%;
@@ -144,4 +144,30 @@ input[type="email"],
   position: relative;
   margin-left: 200px;
   margin-top: 10px;
+}
+/* Tablets */
+@media only screen and (min-width: 490px) {
+  .page-container {
+    height: 100vh;
+    font-size: 1.5rem;
+  }
+  .title-container {
+    font-size: 2rem;
+  }
+  .form-container button {
+    height: 3rem;
+    width: 30%;
+    font-size: 1.8rem;
+  }
+}
+/* Desktop */
+@media only screen and (min-width: 1024px) {
+  .form-container {
+    width: 60vw;
+    margin-top: 1.5rem;
+    font-size: 2rem;
+  }
+  .title-container {
+    font-size: 2.5rem;
+  }
 }
